--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "10.4.14",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
+    "lucide-react": "^0.511.0",
     "next": "13.4.8",
     "postcss": "8.4.24",
     "react": "18.2.0",
